force-app/main/default/objects/RT1__Recording__c/fields/RT1__AllowOthersToInvite__c.field-meta.xml
<CustomField>
    <fullName>RT1__AllowOthersToInvite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Others to Invite</label>
    <type>Checkbox</type>
</CustomField>