force-app/main/default/objects/RT1__Recording__c/fields/RT1__Description__c.field-meta.xml
<CustomField>
    <fullName>RT1__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>