force-app/main/default/objects/RT1__Recording__c/fields/RT1__ImportRegistrations__c.field-meta.xml
<CustomField>
    <fullName>RT1__ImportRegistrations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Registrations</label>
    <type>Checkbox</type>
</CustomField>