force-app/main/default/objects/RT1__Recording__c/fields/RT1__Invitation_Message__c.field-meta.xml
<CustomField>
    <fullName>RT1__Invitation_Message__c</fullName>
    <label>Invitation Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>