force-app/main/default/objects/RT1__Recording__c/fields/RT1__NewRecordingRegistrations__c.field-meta.xml
<CustomField>
    <fullName>RT1__NewRecordingRegistrations__c</fullName>
    <label>New</label>
    <summaryFilterItems>
        <field>RT1__Recording_Registration__c.RT1__Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>RT1__Recording_Registration__c.RT1__Recording__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>