force-app/main/default/objects/RT1__Recording__c/fields/RT1__NextMemberIndex__c.field-meta.xml
<CustomField>
    <fullName>RT1__NextMemberIndex__c</fullName>
    <description>Used for indexing synchronizations between calls</description>
    <label>NextMemberIndex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>