force-app/main/default/objects/RT1__Recording__c/fields/RT1__Passcode__c.field-meta.xml
<CustomField>
    <fullName>RT1__Passcode__c</fullName>
    <label>Passcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>