force-app/main/default/objects/RT1__Recording__c/fields/RT1__PasscodeEnabled__c.field-meta.xml
<CustomField>
    <fullName>RT1__PasscodeEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passcode Enabled</label>
    <type>Checkbox</type>
</CustomField>