force-app/main/default/objects/RT1__Recording__c/fields/RT1__PlaybackNotificationEnabled__c.field-meta.xml
<CustomField>
    <fullName>RT1__PlaybackNotificationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Playback Notification Enabled</label>
    <type>Checkbox</type>
</CustomField>