force-app/main/default/objects/RT1__Recording__c/fields/RT1__Recording_Author__c.field-meta.xml
<CustomField>
    <fullName>RT1__Recording_Author__c</fullName>
    <label>Recording Author</label>
    <type>TextArea</type>
</CustomField>