force-app/main/default/objects/RT1__Recording__c/fields/RT1__StartDate__c.field-meta.xml
<CustomField>
    <fullName>RT1__StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>