force-app/main/default/objects/RT1__Recording__c/fields/RT1__TollFreeNumber__c.field-meta.xml
<CustomField>
    <fullName>RT1__TollFreeNumber__c</fullName>
    <label>Toll Free Number</label>
    <type>Phone</type>
</CustomField>