force-app/main/default/objects/RT1__Recording__c/listViews/RT1__All_Recordings.listView-meta.xml
<ListView>
    <fullName>RT1__All_Recordings</fullName>
    <columns>NAME</columns>
    <columns>RT1__StartDate__c</columns>
    <columns>RT1__PlaybackCount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Recordings</label>
</ListView>