force-app/main/default/objects/RT1__Recording__c/listViews/RT1__My_Recordings.listView-meta.xml
<ListView>
    <fullName>RT1__My_Recordings</fullName>
    <columns>NAME</columns>
    <columns>RT1__StartDate__c</columns>
    <columns>RT1__Duration__c</columns>
    <columns>RT1__PlaybackCount__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Recordings</label>
</ListView>